--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,8 @@
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5",
     "vitest": "^2.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0 <19.0.0"
   }
 }
